[package]
name = "groovy_cracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
groovy_ssl = { version = "0.1.0", path = "../groovy_ssl" }
cust = { version = "0.3" }

[build-dependencies]
cuda_builder = { version = "0.3" }
